samples/_failures_safe/1761400511_46ade3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b2d0c500.c: In function ‘main’:
./samples/SAFE/__tmp_b2d0c500.c:158:12: error: missing terminating " character
  158 |     printf("1. Addition
      |            ^~~~~~~~~~~~
./samples/SAFE/__tmp_b2d0c500.c:158:5: error: expected expression at end of input
  158 |     printf("1. Addition
      |     ^~~~~~
./samples/SAFE/__tmp_b2d0c500.c:158:5: error: expected declaration or statement at end of input
